// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Search: Result section renders correctly 1`] = `
<div
  className="section"
>
  <div
    className="result"
  >
    <span
      className="type"
    />
    <h3
      className="title"
    >
      <a
        href="https://example.com"
      >
        test
      </a>
    </h3>
    <div
      className="childrenContainer"
    />
  </div>
</div>
`;

exports[`Components : Search: Result section renders correctly 2`] = `
<div
  className="section"
>
  <div
    className="result"
  >
    <span
      className="type"
    />
    <h3
      className="title"
    >
      <a
        href="https://example.com"
      >
        test
      </a>
    </h3>
    <div
      className="childrenContainer"
    >
      <p>
        Content
      </p>
    </div>
  </div>
</div>
`;

exports[`Components : Search: Result section renders correctly 3`] = `null`;
